fixed : broken style for caption of images and galleries when embedded as Gutenberg blocks. fixes #1789

--- a/assets/front/scss/0_3_components/_gallery.scss
+++ b/assets/front/scss/0_3_components/_gallery.scss
@@ -8,6 +8,20 @@
         padding: 0;
     }
 }
+// Related to https://github.com/presscustomizr/customizr/issues/1789
+.wp-block-gallery {
+    .blocks-gallery-item {
+      padding: 0;
+    }
+    .blocks-gallery-image figcaption, .blocks-gallery-item figcaption {
+        left: 0;
+        right: 0;
+        text-align: center;
+        width: auto;
+    }
+
+}
+
 .gallery-item {
   // do not style standard gallery
   dt {
