--- a/inc/assets/less/tc_custom.less
+++ b/inc/assets/less/tc_custom.less
@@ -2528,12 +2528,21 @@ article .no-thumb figcaption {
 }
 .wp-caption .wp-caption-text,
 .tc-gallery-style .gallery-caption,
-.entry-caption {
+.entry-caption,
+/* Gutenberg adapt @see https://github.com/presscustomizr/customizr/issues/1789 */
+.wp-block-image figcaption {
   font-style: italic;
   font-size: 12px;
-  font-size: 0.7rem;
-  line-height: 1.3em;
+  font-size: 0.75rem;
+  line-height: 1.5em;
   color: @captionText;
+}
+
+.wp-block-gallery .blocks-gallery-image figcaption, .wp-block-gallery .blocks-gallery-item figcaption {
+    left: 0;
+    right: 0;
+    text-align: center;
+    width: auto;
 }
 
 /* Text meant only for screen readers. */
